# tvm-mlperf-v1.1

./: CMakeLists.txt
apps/ios_rpc/: CMakeLists.txt
apps/ios_rpc/tvmrpc/: RPCServer.h  RPCServer.mm  TVMRuntime.h  TVMRuntime.mm  ViewController.h  ViewController.mm  rpc_args.h  rpc_args.mm  rpc_env.h  rpc_server.h
apps/ios_rpc/tvmrpc.xcodeproj/: project.pbxproj
apps/ios_rpc/tvmrpc/Base.lproj/: Main.storyboard
apps/ios_rpc/tvmrpcLauncher/: tvmrpcLauncher.mm
cmake/modules/: OpenMP.cmake
cmake/modules/contrib/: DNNL.cmake
demo/: README.md  int8_resnet50_demo.py  int8_resnet50_demo_compile.py  int8_resnet50_demo_throughput.py  prepare_package.sh  requirements.txt
demo/cpp_launcher_throughput/: CMakeLists.txt  async_launcher.cpp  async_launcher.py  main.cpp  main.py
demo/docker/: Dockerfile.dnnl_build
python/tvm/contrib/: async_launcher.py
python/tvm/relay/frontend/: qnn_torch.py
python/tvm/relay/op/contrib/: dnnl.py
src/relay/backend/: graph_plan_memory.cc
src/relay/backend/contrib/dnnl/: codegen.cc
src/relay/transforms/: fold_constant.cc
src/runtime/: metadata_module.cc
src/runtime/contrib/dnnl/: dnnl_json_runtime.cc
src/runtime/graph_executor/: async_launcher.cc
tests/python/relay/: test_json_runtime.py
